Fix top image alignment

--- a/src/FakeFooter.css
+++ b/src/FakeFooter.css
@@ -39,6 +39,6 @@
 #footer-img-container img {
   position: absolute;
   right: 0;
-  top: -20%;
+  top: -17%;
   transform: scale(1.5);
 }
